[tool.poetry]
name = "transformers-for-nlp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.38.2"
pandas = "^2.2.1"
numpy = "^1.26.4"
plotly = "^5.19.0"
matplotlib = "^3.8.3"
tensorflow = "^2.16.1"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
